...
    <string name="fragment_b">Fragment B</string>
    <string name="fragment_c">Fragment C</string>
    <string name="welcome_to_session_replay">Welcome to Session Replay</string>
    <string name="click_me">Click Me</string>
    <string name="activity_kiosk_end_to_end">Kiosk (End to End)</string>
    <string name="activity_kiosk_session">Kiosk (In Session)</string>
    <string name="start_kiosk">Start Kiosk</string>
    <string name="back_text">Back</string>
    <string name="end_session">End Session</string>

    <!-- Session Replay tests -->

    <string name="text_view">Default Text View</string>
    <string name="material_text_view">Material Text View</string>
    <string name="app_compat_text_view">App Compat Text View</string>
...
